RESOLVED FIXED234549
REGRESSION(r286169): 0.3% Speedometer regression
https://bugs.webkit.org/show_bug.cgi?id=234549
Summary REGRESSION(r286169): 0.3% Speedometer regression
Antti Koivisto
Reported 2021-12-21 01:27:01 PST
There is some additional work in ChildChangeInvalidation even when :has is not used. Vanilla-* subtests are very heavy on DOM mutations.
Attachments
Patch (11.41 KB, patch)
2021-12-21 01:38 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2021-12-21 01:38:33 PST
EWS
Comment 2 2021-12-21 11:37:20 PST
Committed r287325 (245475@main): <https://commits.webkit.org/245475@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 447698 [details].
Radar WebKit Bug Importer
Comment 3 2021-12-21 11:38:16 PST
Simon Fraser (smfr)
Comment 4 2021-12-21 15:00:38 PST
Comment on attachment 447698 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=447698&action=review > Source/WebCore/ChangeLog:9 > + Speedemater2 Vanilla-* subtests are very heavy on DOM mutations. "Speedemater2"
Note You need to log in before you can comment on or make changes to this bug.