Source/WebCore/style/ChildChangeInvalidation.h
@@ -27,6 +27,7 @@
 
 #include "Element.h"
 #include "StyleInvalidator.h"
+#include "StyleScope.h"
 
 namespace WebCore {
 namespace Style {
@@ -39,6 +40,8 @@ public:
     static void invalidateAfterFinishedParsingChildren(Element&);
 
 private:
+    void invalidateForHasBeforeMutation();
+    void invalidateForHasAfterMutation();
     void invalidateAfterChange();
     void checkForSiblingStyleChanges();
     void invalidateForChangedElement(Element&);
@@ -49,10 +52,35 @@ private:
     Element& parentElement() { return *m_parentElement; }
 
     Element* m_parentElement { nullptr };
-    const bool m_isEnabled;
-
     const ContainerNode::ChildChange& m_childChange;
+
+    const bool m_isEnabled;
+    const bool m_needsHasInvalidation;
 };
+
+inline ChildChangeInvalidation::ChildChangeInvalidation(ContainerNode& container, const ContainerNode::ChildChange& childChange)
+    : m_parentElement(is<Element>(container) ? downcast<Element>(&container) : nullptr)
+    , m_childChange(childChange)
+    , m_isEnabled(m_parentElement ? m_parentElement->needsStyleInvalidation() : false)
+    , m_needsHasInvalidation(m_isEnabled && Scope::forNode(*m_parentElement).usesHasPseudoClass())
+{
+    if (!m_isEnabled)
+        return;
+
+    if (m_needsHasInvalidation)
+        invalidateForHasBeforeMutation();
+}
+
+inline ChildChangeInvalidation::~ChildChangeInvalidation()
+{
+    if (!m_isEnabled)
+        return;
+
+    if (m_needsHasInvalidation)
+        invalidateForHasAfterMutation();
+
+    invalidateAfterChange();
+}
 
 }
 }
