Source/WebCore/style/StyleScope.cpp
@@ -85,6 +85,9 @@ Resolver& Scope::resolver()
             createOrFindSharedShadowTreeResolver();
         else
             createDocumentResolver();
+        
+        if (m_resolver->ruleSets().features().usesHasPseudoClass())
+            m_usesHasPseudoClass = true;
     }
     return *m_resolver;
 }
@@ -505,6 +508,9 @@ void Scope::updateActiveStyleSheets(UpdateType updateType)
         if (sheet->contents().usesStyleBasedEditability())
             m_usesStyleBasedEditability = true;
     }
+
+    if (m_resolver && m_resolver->ruleSets().features().usesHasPseudoClass())
+        m_usesHasPseudoClass = true;
 
     invalidateStyleAfterStyleSheetChange(styleSheetChange);
 }
